[package]
name = "buildxyz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.12"
nix = "0.26.2"
log = "0.4.17"
stderrlog = "0.5.4"
ctrlc = "3.2.5"
clap = { version = "4.1.8", features = [ "derive" ] }
crossbeam-channel = "0.5.7"
