[package]
name = "buildxyz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = { version = "0.12", features = [ "serializable" ] }
nix = "0.26.2"
log = "0.4.17"
stderrlog = "0.5.4"
ctrlc = "3.2.5"
clap = { version = "4.1.8", features = [ "derive" ] }
crossbeam-channel = "0.5.7"
xdg = "2.4.1"
tui = "0.19.0"
crossterm = "0.25"
signal-hook = "0.3.15"
# nix-index dependencies
regex = "1.7.1"
error-chain = "0.12.4"
memchr = "2.5.0"
zstd = { version = "0.12.3", features = [ "zstdmt" ] }
serde_json = "1.0.94"
byteorder = "1.4.3"
regex-syntax = "0.6.28"
grep = "0.2.11"
serde = "1.0.152"
num_cpus = "1.15.0"
serde_bytes = "0.11.9"
tempfile = "3.4.0"
lazy_static = "1.4.0"
toml = "0.7.3"
thiserror = "1.0.40"

[profile.release]
debug = true

[profile.dev]
opt-level = 1              # Otherwise queries takes 10s (~500ms for opt-level=1).
